--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="container">
         <nav class="Navbar">
-          <a href="#"><img id="logo" src="/build/images/StanceHealthcare_FullLogo.png" alt="StanceHealthcare_FullLogo"></a>
+          <a href="#"><img id="logo" src="/images/StanceHealthcare_FullLogo.png" alt="StanceHealthcare_FullLogo"></a>
           <ul class="NavbarList">
             <li><a href="#"><span class="lnr lnr-bubbles"></span></a></li>
             <li><a href="#"><span class="lnr lnr-map-marker"></span></a></li>
@@ -50,10 +50,10 @@
               <span class="lnr lnr-plus"> Features & Options</span>
               <span class="lnr lnr-plus"> Finishes</span>
           </div>
-          <img src="/build/images/level_logo.png" alt="level_logo">
+          <img src="/images/level_logo.png" alt="level_logo">
         </div>
         <div class="collection-img">
-          <img src="/build/images/Accent_Chair.jpg" alt="Accent_Chair">
+          <img src="/images/Accent_Chair.jpg" alt="Accent_Chair">
         </div>
       </div>
     </section>
@@ -62,7 +62,7 @@
 
     <section class="container">
       <nav id="bottomNavigation">
-        <a href="#"><img class="arrow" src="/build/images/arrow-down.png" alt="arrow-down"></a>
+        <a href="#"><img class="arrow" src="/images/arrow-down.png" alt="arrow-down"></a>
         <ul>
           <li><a href="#"><span class="lnr lnr-download2"></span>Brochure</a></li>
           <li><a href="#"><span class="lnr lnr-download2"></span>Pricing</a></li>
@@ -80,7 +80,7 @@
         <div class="items">
           <div class="item">
             <div class="item-image">
-              <img src="/build/images/Accent_chair_rev-600x600.jpg" alt="" />
+              <img src="/images/Accent_chair_rev-600x600.jpg" alt="" />
             </div>
             <div class="item-text">
               <div class="item-text-wrap">
@@ -89,7 +89,7 @@
           </div>
           <div class="item">
             <div class="item-image">
-              <img src="/build/images/Accent_Chair.jpg" alt="" />
+              <img src="/images/Accent_Chair.jpg" alt="" />
             </div>
             <div class="item-text">
               <div class="item-text-wrap">
@@ -98,7 +98,7 @@
           </div>
           <div class="item">
             <div class="item-image">
-              <img src="/build/images/Accent-Double-Stich-400x600.jpg" alt="" />
+              <img src="/images/Accent-Double-Stich-400x600.jpg" alt="" />
             </div>
             <div class="item-text">
               <div class="item-text-wrap">
@@ -107,7 +107,7 @@
           </div>
           <div class="item">
             <div class="item-image">
-              <img src="/build/images/Accent-Curved-Back-577x600.jpg" alt="" />
+              <img src="/images/Accent-Curved-Back-577x600.jpg" alt="" />
             </div>
             <div class="item-text">
               <div class="item-text-wrap">
@@ -116,7 +116,7 @@
           </div>
           <div class="item">
             <div class="item-image">
-              <img src="/build/images/Accent-Double-Stich-400x600.jpg" alt="" />
+              <img src="/images/Accent-Curved-Back-577x600.jpg" alt="" />
             </div>
             <div class="item-text">
               <div class="item-text-wrap">
@@ -125,7 +125,7 @@
           </div>
           <div class="item">
             <div class="item-image">
-              <img src="/build/images/Accent-Curved-Back-577x600.jpg" alt="" />
+              <img src="/images/Accent-Double-Stich-400x600.jpg" alt="" />
             </div>
             <div class="item-text">
               <div class="item-text-wrap">
@@ -134,7 +134,7 @@
           </div>
           <div class="item">
             <div class="item-image">
-              <img src="/build/images/Accent-Easy-Cleaning-400x600.jpg" alt="" />
+              <img src="/images/Accent_chair_rev-600x600.jpg" alt="" />
             </div>
             <div class="item-text">
               <div class="item-text-wrap">
@@ -143,7 +143,7 @@
           </div>
           <div class="item">
             <div class="item-image">
-              <img src="/build/images/Accent_chair_rev-600x600.jpg" alt="" />
+              <img src="/images/Accent_Chair.jpg" alt="" />
             </div>
             <div class="item-text">
               <div class="item-text-wrap">
